--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "json-schema-to-typescript": "^13.1.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "typedoc": "^0.25.9"
   }
 }
